--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </nav>
-    <header>
+    <header>it 
       <div class="container flex header-section">
         <div class="header-left flex">
           <h1>Design Confidently</h1>
