--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       
     </nav>
-    <header>it 
+    <header> 
       <div class="container flex header-section">
         <div class="header-left flex">
           <h1>Design Confidently</h1>
